# oberon0

./: .gitignore  CMakeLists.txt  README.md  astyle-options.ini  run_astyle.bat
src/: abstract_machine.c  abstract_machine.h  generator.c  generator.h  main.c  objects.c  objects.h  parser.c  parser.h  scanner.c  scanner.h  types.c  types.h  utils.c  utils.h
tests/: 01sample.ob0  array_indexing.ob0  declaration_procedure.ob0  declaration_procedure_nested.ob0  declarations_basic.ob0  expressions_arithmetic.ob0  expressions_bool.ob0  record_access.ob0  statement_assign.ob0  statement_compound.ob0  statement_if.ob0  statement_repeat.ob0  statement_while.ob0
